--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@ Autor: Pablo Miyazawa Atualizado em 27 mar 2020
 -->
   <body>
     <div id="intro-pag">
-     <header><h1>Jogos antigos que fizeram história</h1></header>
+     <header>
+        <h1 class="titulos">Jogos antigos que fizeram história</h1></header>
       <p>
         O autor do artigo original fez um levantamento com 30 jogos mais
         influentes/importantes para a evolução dos jogos na indústria do
@@ -31,6 +32,7 @@ Autor: Pablo Miyazawa Atualizado em 27 mar 2020
         </ul>
       </nav>
     </div>
+
     <div class="conteudo-padrao">
       <h2 id="space">1978 – Space Invaders</h2>
       <p>
@@ -48,6 +50,7 @@ Autor: Pablo Miyazawa Atualizado em 27 mar 2020
       <img src="si.jpg" alt="" height="300" width="448">
 
     </div>
+
     <div class="conteudo-padrao">
       <h2 id="pac">1980 – Pac-Man</h2>
       <p>
@@ -85,6 +88,7 @@ Autor: Pablo Miyazawa Atualizado em 27 mar 2020
       </p>
       <img src="dk.jpg" alt="imagem jogo donkey kong">
     </div>
+    </body>
 
     <div class="conteudo-padrao">
       <h2 id="mario">1985 – Super Mario Bros.</h2>
@@ -99,7 +103,6 @@ Autor: Pablo Miyazawa Atualizado em 27 mar 2020
         de dominar (e largar), foi inspiração para todos os games de ação.
       </p>
     </div>
-
 
     <footer>Aula para formatação de CSS.</footer>
   </body>
